@@ -1,3 +1,9 @@
+2008-03-31  Christian Kirbach  <Christian.Kirbach@googlemail.com>
+
+	* doc/C/jhbuild.xml: Added a more sophisticated session script that
+        starts up seperate instances of svn dbus and hal. It is supposed to be
+        run from a graphical login manager.
+
 2008-03-31  Frederic Peters  <fpeters@0d.be>
 
 	* tests/autotools/Makefile.am, tests/autotools/autogen.sh,
